--- a/Readme
+++ b/Readme
@@ -1,5 +1,5 @@
-##Title:   "A shared spatial model for multivariate extreme-valued binary data with non-random missingness"  	        
-##Authors:  Xiaoyue Zhao, Lin Zhang, and Dipankar Bandyopadhyay
+Title:   "A shared spatial model for multivariate extreme-valued binary data with non-random missingness"  	        
+Authors:  Xiaoyue Zhao, Lin Zhang, and Dipankar Bandyopadhyay
 
 Status:  "Under Review" in Sankhya-B
 
