--- a/Readme
+++ b/Readme
@@ -11,7 +11,7 @@ with non-random missingness. Application to real data
 Author: Xiaoyue Zhao, PhD (edited by Dipankar Bandyopadhyay, PhD)
  
 
-Last updated: 11/15/2018
+Last updated: 11/15/2018; 11:15 AM
 
 There are 3 files in the repository
 
